--- a/week-02/day-02/todo/package.json
+++ b/week-02/day-02/todo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.0",
+    "@material-ui/icons": "^4.5.1",
     "cra-template": "1.0.0",
     "npm": "^6.13.4",
     "react": "^16.12.0",
